# mobile_rtk

./: README.md
app/: CMakeLists.txt  build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: Android.mk  Application.mk  convrnx.c  native-lib.cpp  naviMain.cpp  naviMain.h  phoneObsData.cpp  phoneObsData.h  pntpos.c  postpos.c  ppp.c  ppp_corr.c  rt17.c  rtcm3.c  rtdlib.cpp  rtdlib.h  rtkcmn.c  rtklib.h  rtkpos.c  rtksvr.c  septentrio.c  stream.c
app/src/main/java/com/kubolab/gnss/gnssloggerTestSPP/: CoodinateConv.java  FTPCliant.java  FileLogger.java  GnssClient.java  GnssContainer.java  GnssListener.java  GnssNavigationConv.java  GnssNavigationDataBase.java  KalmanFilter.java  Logger2Fragment.java  Logger3Fragment.java  LoggerFragment.java  MainActivity.java  Mathutil.java  Permission.java  SQLiteManager.java  SettingsFragment.java  StaticGnssData.java  StaticVariable.java  TcpPath.java  UiLogger.java
app/src/main/res/layout/: fragment_log3.xml
app/src/main/res/values/: strings.xml
gradle/wrapper/: gradle-wrapper.properties
